# my_library

./: .database.db  .flake8  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  example.docker.env  example.env  pyproject.toml  requirements.txt
app/: Dockerfile  logger.py  main.py
app/core/: config.py
app/db/: database.py  db_depends.py
app/migrations/: env.py
app/migrations/versions/: 27e9f4e46d1f_start_database.py
app/models/: books.py
app/repositories/: books.py
app/routers/: books.py
app/schemas/: books.py
tests/: conftest.py  test_api.py  test_mock.py
