[project]
name = "my-library"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
minversion = "9.0"
asyncio_mode = "auto"
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*", "*_test"]
addopts = [
    "-vv", # подробный вывод хода теста
    "--import-mode=importlib"    # меньше проблем с импортами
]
