[project]
name = "my-library"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "aiosqlite>=0.22.1",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.12.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
minversion = "9.0"
asyncio_mode = "auto"
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*", "*_test"]
addopts = [
    "-vv", # подробный вывод хода теста
    "--import-mode=importlib"    # меньше проблем с импортами
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.autoflake]
check-diff = true
recursive = true
imports = ["sqlalchemy", "app"]

[tool.pyright]
include = ["app"]
exclude = ["**/node_modules", "**/__pycache__", ".venv"]
